# mcp-google-workspace

./: .gitignore  CLAUDE.md  Dockerfile  Dockerfile.test  README.md  pyproject.toml  requirements-test.in  requirements.in  smithery.yaml
src/: create_test_credentials.py  run_oauth_flow.py
src/mcp_google_workspace/: calendar.py  drive.py  gauth.py  gmail.py  server.py  tools_calendar.py  tools_drive.py  tools_gmail.py
src/mcp_gsuite/: calendar.py  drive.py  gauth.py  gmail.py  server.py  tools_calendar.py  tools_drive.py  tools_gmail.py
src/tests/: test_calendar_tools.py  test_drive_tools.py  test_gmail_tools.py
tests/: test_gauth.py  test_tools_calendar.py  test_tools_drive.py  test_tools_gmail.py
