[project]
name = "mcp-google-workspace"
version = "0.4.0"
description = "MCP Server to connect to Google G-Suite"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
 "beautifulsoup4>=4.12.3",
 "google-api-python-client>=2.154.0",
 "httplib2>=0.22.0",
 "mcp>=1.3.0",
 "google-auth-oauthlib>=1.0.0",
 "google-auth>=2.0.0",
 "python-dotenv>=1.0.1",
 "pytz>=2024.2",
 "requests>=2.32.3",
 "redis>=5.0",
 "redisvl>=0.1"
]

[[project.authors]]
name = "SOMEKIDPUNK"
email = "circa@indepreneur.io"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project.optional-dependencies]
dev = [
    "pyright>=1.1.389",
    "pytest>=8.0",
    "pytest-mock>=3.10.0",
    "pytest-asyncio>=0.23.7"
]

[project.scripts]
mcp-google-workspace = "mcp_google_workspace:main"

[tool.hatch.build.targets.wheel]
# Explicitly tell Hatch where to find the package source
packages = ["src/mcp_google_workspace"]
