[project]
name = "mcp-google-workspace"
version = "0.0.1"
description = "Google Workspace MCP server for Indepreneur team members"
# Only workspace-referenced packages for IDE support
dependencies = [
    "toastmcp",
]
requires-python = ">=3.13"

[tool.uv.sources]
toastmcp = { workspace = true }
